--- a/notebooks/prediction_comparison.ipynb
+++ b/notebooks/prediction_comparison.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/alex/.local/share/virtualenvs/ardi-RqNcZ39U/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/adday/.virtualenvs/ardi-CRQfTZgZ/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -25,15 +25,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_ds = SocialVAEDataset(\"../../SocialVAE/data/zucker_day_controller_scene/19/cadrl/overtake/23_0.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -41,32 +32,51 @@
      "text": [
       "3.1445721622873704 5.692209585648802\n",
       "0.2297543604784849 0.37006448538139813\n",
-      "0.20786477077296284 0.43129064850663734\n"
+      "0.20786474716700942 0.43129067409210287\n",
+      "0.20752467352352605 0.4384539921627614\n"
      ]
     }
    ],
    "source": [
     "lp = LinearPredictor(8, VelocityCalc.LAST_DISPLACEMENT)\n",
     "pp = PowerlawPredictor(8, VelocityCalc.LAST_DISPLACEMENT, PrefVelocityCalc.FIX_MAG_ORACLE_DIR)\n",
-    "sp = SocialVAEPredictor(\"../../SocialVAE/models/zara01/ckpt-best\", 4, 5, 8, VelocityCalc.LAST_DISPLACEMENT, \"cpu\")\n",
+    "sp = SocialVAEPredictor(\"../models/social_vae_zara01_8_12/ckpt-best\", 4, 5, 8, VelocityCalc.LAST_DISPLACEMENT, \"cpu\")\n",
+    "sp_5_8 = SocialVAEPredictor(\"../models/social_vae_zara01_5_8/ckpt-best\", 4, 5, 8, VelocityCalc.LAST_DISPLACEMENT, \"cpu\")\n",
     "predictors = {\n",
     "    \"Linear\": lp,\n",
     "    \"Powerlaw\": pp,\n",
-    "    \"SocialVAE\": sp\n",
-    "}\n",
-    "\n",
-    "lp_ades, lp_fdes = lp.predict_dataset(test_ds, 5, [i for i in test_ds.agents if i != -1], False)\n",
-    "pp_ades, pp_fdes = pp.predict_dataset(test_ds, 5, [i for i in test_ds.agents if i != -1], False)\n",
-    "sp_ades, sp_fdes = sp.predict_dataset(test_ds, 5, [i for i in test_ds.agents if i != -1], False)\n",
-    "\n",
-    "print(np.mean(lp_ades), np.mean(lp_fdes))\n",
-    "print(np.mean(pp_ades), np.mean(pp_fdes))\n",
-    "print(np.mean(sp_ades), np.mean(sp_fdes))"
+    "    \"SocialVAE-Zara-Default\": sp,\n",
+    "    \"SocialVAE-Zara-5-8\": sp_5_8,\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear 3.1446 5.6922\n",
+      "Powerlaw 0.2298 0.3701\n",
+      "SocialVAE-Zara-Default 0.2079 0.4313\n",
+      "SocialVAE-Zara-5-8 0.2075 0.4385\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_ds = SocialVAEDataset(\"../../SocialVAE/data/zucker_day_controller_scene/19/cadrl/overtake/23_0.txt\")\n",
+    "\n",
+    "for pred in predictors:\n",
+    "    ades, fdes = predictors[pred].predict_dataset(test_ds, 5, [i for i in test_ds.agents if i != -1], False)\n",
+    "    print(pred, round(np.mean(ades), 4), round(np.mean(fdes), 4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +85,9 @@
     "from tqdm import tqdm\n",
     "from typing import Dict, Tuple, List\n",
     "\n",
-    "results = {}\n",
-    "\n",
     "def get_results(predictors: Dict[str, Predictor], root: str, glob: str, plot: bool) -> Dict[str, Dict[str, Tuple[List[float], List[float]]]]:\n",
+    "    results = {}\n",
+    "\n",
     "    for i, fn in tqdm(list(enumerate(Path(root).glob(glob)))):\n",
     "        day, controller, scene = str(fn).split(\"/\")[5:8]\n",
     "        idx, offset = fn.stem.split(\"_\")\n",
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,20 +125,14 @@
     "    return p > alpha\n",
     "\n",
     "def get_results_normalicy(results: Dict[str, Dict[str, Tuple[List[float], List[float]]]]):\n",
-    "    linears = [x for x in [results[key][\"Linear\"][0] for key in results] for x in x]\n",
-    "    powerlaws = [x for x in [results[key][\"Powerlaw\"][0] for key in results] for x in x]\n",
-    "    socials = [x for x in [results[key][\"SocialVAE\"][0] for key in results] for x in x]\n",
-    "\n",
     "    return {\n",
-    "        \"Linear\": is_normal(linears),\n",
-    "        \"Powerlaw\": is_normal(powerlaws),\n",
-    "        \"SocialVAE\": is_normal(socials)\n",
+    "        pred: is_normal([x for x in [results[key][pred][0] for key in results] for x in x]) for pred in predictors\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,13 +144,9 @@
     "\n",
     "    plot_fn = sns.kdeplot\n",
     "\n",
-    "    plot_fn([x for x in [results[key][\"Linear\"][0] for key in results] for x in x], label=\"Linear\", ax=axs[0])\n",
-    "    plot_fn([x for x in [results[key][\"SocialVAE\"][0] for key in results] for x in x], label=\"SocialVAE\", ax=axs[0])\n",
-    "    plot_fn([x for x in [results[key][\"Powerlaw\"][0] for key in results] for x in x], label=\"Powerlaw\", ax=axs[0])\n",
-    "\n",
-    "    plot_fn([x for x in [results[key][\"Linear\"][1] for key in results] for x in x], label=\"Linear\", ax=axs[1])\n",
-    "    plot_fn([x for x in [results[key][\"SocialVAE\"][1] for key in results] for x in x], label=\"SocialVAE\", ax=axs[1])\n",
-    "    plot_fn([x for x in [results[key][\"Powerlaw\"][1] for key in results] for x in x], label=\"Powerlaw\", ax=axs[1])\n",
+    "    for pred in predictors:\n",
+    "        plot_fn([x for x in [results[key][pred][0] for key in results] for x in x], label=pred, ax=axs[0])\n",
+    "        plot_fn([x for x in [results[key][pred][1] for key in results] for x in x], label=pred, ax=axs[1])\n",
     "\n",
     "    axs[0].set_ylabel(\"ADE Density\")\n",
     "    axs[1].set_ylabel(\"FDE Density\")\n",
@@ -157,254 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_20411/3185985465.py:22: FutureWarning: ['filename', 'controller'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
-      "  df_results(results).groupby([\"scene\", \"predictor\"]).agg([\"mean\", \"sem\"])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"2\" halign=\"left\">ade</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">fde</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>sem</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>sem</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>scene</th>\n",
-       "      <th>predictor</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">2v1</th>\n",
-       "      <th>Linear</th>\n",
-       "      <td>3.450385</td>\n",
-       "      <td>0.021212</td>\n",
-       "      <td>6.171933</td>\n",
-       "      <td>0.038753</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Powerlaw</th>\n",
-       "      <td>0.174028</td>\n",
-       "      <td>0.006734</td>\n",
-       "      <td>0.311100</td>\n",
-       "      <td>0.011788</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SocialVAE</th>\n",
-       "      <td>0.189858</td>\n",
-       "      <td>0.002303</td>\n",
-       "      <td>0.409701</td>\n",
-       "      <td>0.005357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">3v1 90</th>\n",
-       "      <th>Linear</th>\n",
-       "      <td>3.096968</td>\n",
-       "      <td>0.017311</td>\n",
-       "      <td>5.524787</td>\n",
-       "      <td>0.030293</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Powerlaw</th>\n",
-       "      <td>0.162190</td>\n",
-       "      <td>0.007549</td>\n",
-       "      <td>0.306514</td>\n",
-       "      <td>0.015343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SocialVAE</th>\n",
-       "      <td>0.175318</td>\n",
-       "      <td>0.004355</td>\n",
-       "      <td>0.351335</td>\n",
-       "      <td>0.008129</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">3v1 adjacent</th>\n",
-       "      <th>Linear</th>\n",
-       "      <td>3.044226</td>\n",
-       "      <td>0.019956</td>\n",
-       "      <td>5.449274</td>\n",
-       "      <td>0.035241</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Powerlaw</th>\n",
-       "      <td>0.309726</td>\n",
-       "      <td>0.004384</td>\n",
-       "      <td>0.605071</td>\n",
-       "      <td>0.012777</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SocialVAE</th>\n",
-       "      <td>0.198825</td>\n",
-       "      <td>0.004535</td>\n",
-       "      <td>0.397357</td>\n",
-       "      <td>0.010256</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">3v1 opposite</th>\n",
-       "      <th>Linear</th>\n",
-       "      <td>3.069173</td>\n",
-       "      <td>0.018370</td>\n",
-       "      <td>5.486943</td>\n",
-       "      <td>0.033084</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Powerlaw</th>\n",
-       "      <td>0.271743</td>\n",
-       "      <td>0.007217</td>\n",
-       "      <td>0.515838</td>\n",
-       "      <td>0.017253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SocialVAE</th>\n",
-       "      <td>0.189976</td>\n",
-       "      <td>0.002332</td>\n",
-       "      <td>0.384621</td>\n",
-       "      <td>0.006034</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">head-to-head</th>\n",
-       "      <th>Linear</th>\n",
-       "      <td>3.451056</td>\n",
-       "      <td>0.022854</td>\n",
-       "      <td>6.190798</td>\n",
-       "      <td>0.043053</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Powerlaw</th>\n",
-       "      <td>0.277177</td>\n",
-       "      <td>0.016488</td>\n",
-       "      <td>0.486287</td>\n",
-       "      <td>0.031378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SocialVAE</th>\n",
-       "      <td>0.165234</td>\n",
-       "      <td>0.002585</td>\n",
-       "      <td>0.319497</td>\n",
-       "      <td>0.007061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">intersection</th>\n",
-       "      <th>Linear</th>\n",
-       "      <td>3.301016</td>\n",
-       "      <td>0.014896</td>\n",
-       "      <td>5.914903</td>\n",
-       "      <td>0.028206</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Powerlaw</th>\n",
-       "      <td>0.199501</td>\n",
-       "      <td>0.004423</td>\n",
-       "      <td>0.336109</td>\n",
-       "      <td>0.007768</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SocialVAE</th>\n",
-       "      <td>0.292232</td>\n",
-       "      <td>0.004953</td>\n",
-       "      <td>0.542815</td>\n",
-       "      <td>0.009375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">overtake</th>\n",
-       "      <th>Linear</th>\n",
-       "      <td>3.173309</td>\n",
-       "      <td>0.029478</td>\n",
-       "      <td>5.681318</td>\n",
-       "      <td>0.055388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Powerlaw</th>\n",
-       "      <td>0.171884</td>\n",
-       "      <td>0.008091</td>\n",
-       "      <td>0.282354</td>\n",
-       "      <td>0.013680</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SocialVAE</th>\n",
-       "      <td>0.258976</td>\n",
-       "      <td>0.005249</td>\n",
-       "      <td>0.474229</td>\n",
-       "      <td>0.006587</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                             ade                 fde          \n",
-       "                            mean       sem      mean       sem\n",
-       "scene        predictor                                        \n",
-       "2v1          Linear     3.450385  0.021212  6.171933  0.038753\n",
-       "             Powerlaw   0.174028  0.006734  0.311100  0.011788\n",
-       "             SocialVAE  0.189858  0.002303  0.409701  0.005357\n",
-       "3v1 90       Linear     3.096968  0.017311  5.524787  0.030293\n",
-       "             Powerlaw   0.162190  0.007549  0.306514  0.015343\n",
-       "             SocialVAE  0.175318  0.004355  0.351335  0.008129\n",
-       "3v1 adjacent Linear     3.044226  0.019956  5.449274  0.035241\n",
-       "             Powerlaw   0.309726  0.004384  0.605071  0.012777\n",
-       "             SocialVAE  0.198825  0.004535  0.397357  0.010256\n",
-       "3v1 opposite Linear     3.069173  0.018370  5.486943  0.033084\n",
-       "             Powerlaw   0.271743  0.007217  0.515838  0.017253\n",
-       "             SocialVAE  0.189976  0.002332  0.384621  0.006034\n",
-       "head-to-head Linear     3.451056  0.022854  6.190798  0.043053\n",
-       "             Powerlaw   0.277177  0.016488  0.486287  0.031378\n",
-       "             SocialVAE  0.165234  0.002585  0.319497  0.007061\n",
-       "intersection Linear     3.301016  0.014896  5.914903  0.028206\n",
-       "             Powerlaw   0.199501  0.004423  0.336109  0.007768\n",
-       "             SocialVAE  0.292232  0.004953  0.542815  0.009375\n",
-       "overtake     Linear     3.173309  0.029478  5.681318  0.055388\n",
-       "             Powerlaw   0.171884  0.008091  0.282354  0.013680\n",
-       "             SocialVAE  0.258976  0.005249  0.474229  0.006587"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -425,28 +180,28 @@
     "                \"fde\": np.mean(results[fn][pred][1]),\n",
     "            })\n",
     "\n",
-    "    return pd.DataFrame(data)\n",
-    "\n",
-    "df_results(results).groupby([\"scene\", \"predictor\"]).agg([\"mean\", \"sem\"])"
+    "    return pd.DataFrame(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  9%|▉         | 73/816 [08:00<40:57,  3.31s/it]  "
+      " 26%|██▌       | 209/816 [03:45<20:27,  2.02s/it]"
      ]
     }
    ],
    "source": [
-    "results = get_results(predictors, \"../../SocialVAE/data/zucker_day_controller_scene/\", \"./*/cadrl/*/*txt\", False)\n",
-    "plot_results(results, \"CADRL on All Scenarios\")\n",
-    "print(get_results_normalicy(results))"
+    "cadrl_results = get_results(predictors, \"../../SocialVAE/data/zucker_day_controller_scene/\", \"./*/cadrl/*/*txt\", False)\n",
+    "plot_results(cadrl_results, \"CADRL on 2v1\")\n",
+    "cadrl_df = df_results(cadrl_results)\n",
+    "\n",
+    "print(get_results_normalicy(cadrl_results))"
    ]
   },
   {
@@ -479,11 +234,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2a97949dbf5289450083fd97ade206dcccf4510d06ea1fc443575209d22fe5f9"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('ardi-RqNcZ39U')",
+   "display_name": "Python 3.8.10 ('ardi-CRQfTZgZ')",
    "language": "python",
    "name": "python3"
   },
@@ -497,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
